refactor: 更新最新的模块依赖，不再依赖cells，只依赖meta