@@ -1,47 +1,43 @@
 package cn.labzen.spring;
 
-import cn.labzen.cells.algorithm.crypto.Ciphers;
-import cn.labzen.cells.algorithm.crypto.cipher.SymmetricalCipher;
-import cn.labzen.cells.core.utils.Strings;
+import cn.labzen.spring.env.Crypto;
 
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
-import java.util.Arrays;
 
 public class EncryptConfigFileUtil {
 
   public static void main(String[] args) throws Exception {
-    String inputLocation = "C:\\Dean\\working\\labzen\\configs\\spring";
-    String outputLocation = "C:\\Dean\\working\\labzen\\configs\\spring\\crypto";
+    String inputLocation = "/Users/dean/Working/labzen/configs/spring";
+    String outputLocation = "/Users/dean/Working/labzen/configs/spring/crypto";
 
-    File inputFile = new File(inputLocation);
-    File outputFile = new File(outputLocation);
-    if (!outputFile.exists()) {
-      outputFile.mkdir();
+    File inputDirectory = new File(inputLocation);
+    File outputDirectory = new File(outputLocation);
+    if (!outputDirectory.exists()) {
+      outputDirectory.mkdir();
     }
 
-    File[] subFiles = inputFile.listFiles(p -> p.isFile() && p.getName().endsWith(".yml"));
+    File[] subFiles = inputDirectory.listFiles(p -> p.isFile() && p.getName().endsWith(".yml"));
     if (subFiles == null) {
       System.out.println("目录下没有yml文件");
       return;
     }
 
     // !!! 对称加密 Key
-    String cryptoKey = "q68HAItfjWbJIBPk";
-    byte[] iv = new byte[16];
-    Arrays.fill(iv, (byte) 0);
-    SymmetricalCipher sc = Ciphers.symmetrical().withKey(cryptoKey).withIVParameter(iv);
+    String password = "q68HAItfjWbJIBPk";
+    Crypto crypto = new Crypto(password);
 
     for (File subFile : subFiles) {
       String name = subFile.getName();
-      String cleanName = Strings.trim(name, ".yml");
+      int dotIndex = name.lastIndexOf('.');
+      String cleanName = name.substring(0, dotIndex);
 
-      byte[] contentBytes = Files.readAllBytes(subFile.toPath());
-      byte[] encryptedContent = sc.encrypt(contentBytes);
+      String content = Files.readString(subFile.toPath());
+      byte[] encryptedContent = crypto.encrypt(content);
 
-      File output = new File(outputFile, cleanName + ".cfg");
+      File output = new File(outputDirectory, cleanName + ".cfg");
       Path outputPath = output.toPath();
       if (output.exists()) {
         Files.delete(outputPath);
@@ -49,5 +45,4 @@ public class EncryptConfigFileUtil {
       Files.write(outputPath, encryptedContent, StandardOpenOption.CREATE_NEW);
     }
   }
-
 }
